--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,22 +7,61 @@ site_description: >-
 
 # Repository
 repo_name: abramjkline/mondmonorepo
-repo_url: https://github.com/abramjkline/mondmonorepo
+repo_url: https://github.com/abramjkline/mondomonorepo
 
 # Copyright
-copyright: Copyright &copy; 2024 Your Name
+copyright: Copyright &copy; 2024 Abram Kline
 
 # Configuration
 theme:
   name: material
+  palette:
+    - scheme: default
+      primary: blue-grey
+      accent: teal
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to dark mode
+      colors:
+        background: "#263238"
+        foreground: "#B0BEC5"
+        text: "#607D8B"
+        selection-background: "#546E7A"
+        selection-foreground: "#FFFFFF"
+        accent-color: "#009688"
+        green: "#c3e88d"
+        yellow: "#ffcb6b"
+        blue: "#82aaff"
+        red: "#f07178"
+        purple: "#c792ea"
+        orange: "#f78c6c"
+        cyan: "#89ddff"
+    - scheme: slate
+      primary: deep-orange
+      accent: deep-orange
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to light mode
+      colors:
+        background: "#212121"
+        foreground: "#B0BEC5"
+        text: "#727272"
+        selection-background: "#404040"
+        accent-color: "#FF9800"
+        green: "#c3e88d"
+        yellow: "#ffcb6b"
+        blue: "#82aaff"
+        red: "#f07178"
+        purple: "#c792ea"
+        orange: "#f78c6c"
+
   features:
-    - navigation.tabs
+ #   - navigation.tabs
     - navigation.sections
+    - navigation.instant_page
     - toc.integrate
     - content.code.annotate
     - content.tabs.link
-  font:
-    - code: Ubuntu Mono
   icon:
     - admonition:
       note: fontawesome/solid/circle-info
@@ -37,19 +76,6 @@ theme:
       bug: fontawesome/solid/robot
       example: octicons/code-16
       quote: fontawesome/solid/quote-left
-  palette:
-    scheme: default
-    primary: indigo
-    accent: indigo
-    toggle:
-      icon: material/toggle-switch
-      name: Switch to dark mode
-    scheme: slate 
-    primary: blue
-    accent: blue
-    toggle:
-      icon: material/toggle-switch-off-outline
-      name: Switch to light mode
 
 extra_javascript:
   - https://unpkg.com/mermaid@8.14.0/dist/mermaid.min.js
@@ -88,8 +114,6 @@ markdown_extensions:
   - footnotes
   - md_in_html
   - tables
-  - toc:
-      permalink: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -113,3 +137,4 @@ markdown_extensions:
 # Navigation
 nav:
   - Home: index.md
+  - Projects: projects.md
