--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ mergedeep
 mistune
 mkdocs
 mkdocs-autolinks-plugin
+mkdocs-awesome-pages-plugin
 mkdocs-glightbox
 mkdocs-material
 mkdocs-material-extensions
