--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,26 @@
-attrs
-beautifulsoup4
-bleach
-certifi
-cffi
-charset-normalizer
-click
-colorama
-cryptography
-defusedxml
-entrypoints
-fastjsonschema
-ghp-import
-gitdb
-GitPython
-idna
-importlib-metadata
-Jinja2
-jsonschema
-jupyter-client
-jupyter-core
-jupyterlab-pygments
-Markdown
-MarkupSafe
-mergedeep
-mistune
-mkdocs
-mkdocs-autolinks-plugin
-mkdocs-awesome-pages-plugin
-mkdocs-glightbox
-mkdocs-material
-mkdocs-material-extensions
-mkdocs-monorepo-plugin
-mkdocs-open-in-new-tab
-mknotebooks
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-packaging
-pandocfilters
-pycparser
-pygments
-PyJWT
-pymdown-extensions
-pyparsing
-pyrsistent
-python-dateutil
-python-slugify
-pywin32; sys_platform == "win32"
-PyYAML
-pyyaml-env-tag
-pyzmq
-requests
-six
-smmap
-soupsieve
-text-unidecode
-tinycss2
-tornado
-traitlets
-urllib3
-watchdog
-webencodings
-zipp
+fastjsonschema==2.19.1
+mkdocs-glightbox==0.4.0
+paginate==0.5.6
+Pygments==2.18.0
+PyJWT==2.8.0
+pyparsing==3.1.2
+pyrsistent==0.20.0
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pywin32==306
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+pyzmq==26.0.3
+regex==2024.5.15
+rpds-py==0.18.1
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+text-unidecode==1.3
+tinycss2==1.3.0
+tornado==6.4.1
+traitlets==5.14.3
+urllib3==2.2.1
+watchdog==4.0.0
+webencodings==0.5.1
+zipp==3.19.2
