--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pyparsing==3.1.2
 pyrsistent==0.20.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
-pywin32>=306
+pywin32
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
 pyzmq==26.0.3
