--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,49 @@
+attrs
+beautifulsoup4
+bleach
+certifi
+cffi
+charset-normalizer
+click
+colorama
+cryptography
+defusedxml
+entrypoints
 fastjsonschema==2.19.1
+ghp-import
+gitdb
+GitPython
+idna
+importlib-metadata
+Jinja2
+jsonschema
+jupyter-client
+jupyter-core
+jupyterlab-pygments
+Markdown
+MarkupSafe
+mergedeep
+mistune
 mkdocs
+mkdocs-autolinks-plugin
+mkdocs-awesome-pages-plugin
 mkdocs-glightbox==0.4.0
+mkdocs-material
+mkdocs-material-extensions
+mkdocs-monorepo-plugin
+mkdocs-open-in-new-tab
+mknotebooks
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+packaging
+pandocfilters
+pycparser
 paginate==0.5.6
 Pygments==2.18.0
 PyJWT==2.8.0
+pymdown-extensions
 pyparsing==3.1.2
 pyrsistent==0.20.0
 python-dateutil==2.9.0.post0
@@ -13,6 +53,7 @@ PyYAML==6.0.1
 pyyaml_env_tag==0.1
 pyzmq==26.0.3
 regex==2024.5.15
+requests
 rpds-py==0.18.1
 six==1.16.0
 smmap==5.0.1
