--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -157,4 +157,5 @@ nav:
     - Lyrics:
       - Eleven: ./songwriting/11.md
       - Philosophy of the Night: ./songwriting/philosophy.md
+      - Ten: ./songwriting/10.md
  
