--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ theme:
       example: octicons/code-16
       quote: fontawesome/solid/quote-left
 
+extra_css:
 extra_javascript:
   - https://unpkg.com/mermaid@8.14.0/dist/mermaid.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.3.0/tablesort.min.js
