add Welcome Home

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,4 +159,5 @@ nav:
       - Eleven: ./songwriting/11.md
       - Philosophy of the Night: ./songwriting/philosophy.md
       - Ten: ./songwriting/10.md
+      - Welcome Home: ./songwriting/welcome_home.md
  
