--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,5 +159,6 @@ nav:
       - Eleven: ./songwriting/11.md
       - Philosophy of the Night: ./songwriting/philosophy.md
       - Ten: ./songwriting/10.md
+      - Thirty Eight: ./songwriting/38.md
       - Welcome Home: ./songwriting/welcome_home.md
  
