--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,9 +156,22 @@ nav:
     - Projects:
       - Original Music: ./songwriting/recordings.md
     - Lyrics:
+      - All I Can Say: ./songwriting/all_i_can_say.md
+      - Around the World: ./songwriting/around_the_world.md
+      - Candle: ./songwriting/candle.md
+      - Cold Season: ./songwriting/cold_season.md
       - Eleven: ./songwriting/11.md
+      - Enough: ./songwriting/enough.md
+      - Hypnotized: ./songwriting/hypnotized.md
+      - Left Lane: ./songwriting/left_lane.md
+      - Lullaby: ./songwriting/lullaby.md
+      - November 12: ./songwriting/november_12.md
       - Philosophy of the Night: ./songwriting/philosophy.md
+      - Queen Bee: ./songwriting/queen_bee.md
       - Ten: ./songwriting/10.md
       - Thirty Eight: ./songwriting/38.md
+      - Unlock Another Door: ./songwriting/unlock_another_door.md
+      - Warrenville Road: ./songwriting/warrenville_road.md
       - Welcome Home: ./songwriting/welcome_home.md
+      - Where You've Been: ./songwriting/where_youve_been.md
  
